# rpg_youbot_torque_control

./: .gitignore  README.md
YoubotArmModel/: ValuesInternet.hpp  YoubotArmDynamicsSymbolic.hpp  YoubotArmFKin.hpp  YoubotArmModel.hpp
ik_solver_service/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
ik_solver_service/examples_old/: calibrateWithVicon.launch  calibrate_joints.cpp  drive_circle.cpp  drive_circle_with_jta.cpp  drive_square.cpp  grasp_ik.cpp  offsetCalibrationWithVicon.launch  offset_calibration.cpp  withVicon.launch
ik_solver_service/include/: YoubotGraspIK.h  youbot_grasp_ik.h
ik_solver_service/include/ik_solver_service/: youbot_grasp_ik.h
ik_solver_service/msg/: FullyConstrainedReq.msg  FullyConstrainedRes.msg
ik_solver_service/src/: YoubotGraspIK.cpp  ik_solver_service.cpp  test_client.cpp  youbot_grasp_ik.cpp
ik_solver_service/srv/: SolveClosestIK.srv  SolveFullyConstrainedIK.srv  SolveFullyConstrainedIKArray.srv  SolvePreferredPitchIK.srv  SolvePreferredTypeIK.srv
rpg_youbot_common/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
rpg_youbot_common/include/: rpg_youbot_common.h
rpg_youbot_common/include/rpg_youbot_common/: common.h  rpg_youbot_common.h
rpg_youbot_common/src/: rpg_youbot_common.cpp
torque_control/: .gitignore  CMakeLists.txt  Controller.cfg  log.txt  mainpage.dox  manifest.xml  package.xml
torque_control/action/: torque_trajectory.action
torque_control/include/torque_control/: torque_control.h
torque_control/msg/: torque_trajectoryAction.msg  torque_trajectoryActionFeedback.msg  torque_trajectoryActionGoal.msg  torque_trajectoryActionResult.msg  torque_trajectoryFeedback.msg  torque_trajectoryGoal.msg  torque_trajectoryResult.msg
torque_control/src/: torque.cpp  torque.hpp  torque_control.cpp
torque_control/srv/: step.srv
torque_example/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
torque_example/launch/: torque_example.launch
torque_example/src/: circle.cpp  ltr.cpp
trajectory_generator/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
trajectory_generator/include/trajectory_generator/: trajectory_generator.h
trajectory_generator/src/: tester.cpp  traj.cpp  traj.hpp  trajectory_generator.cpp  trajectory_server.cpp  trajserv.cpp
trajectory_generator/srv/: CStoCS.srv  Circle.srv  JStoCS.srv  JStoJS.srv
youbot_arm_model/: CMakeLists.txt  package.xml
youbot_arm_model/include/youbot_arm_model/: values_internet.h  values_urdf.h  youbot_arm_dynamics.h  youbot_arm_dynamics_symbolic.h  youbot_arm_forward_kinematics.h  youbot_arm_model.h  youbot_jacobi.h  youbot_joints.h
