<?xml version="1.0"?>
<package>
  <name>ik_solver_service</name>

  <version>0.1.0</version>
  <description>ik_solver_service</description>

  <maintainer email="xxx@todo.todo">keiserb</maintainer>
  <author email="xxx@todo.todo">keiserb</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
</package>

