<?xml version="1.0"?>
<package>
  <name>rpg_youbot_common</name>

  <version>0.1.0</version>
  <description>rpg_youbot_common</description>

  <maintainer email="xxx@todo.todo">keiserb</maintainer>
  <author email="xxx@todo.todo">keiserb</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>brics_actuator</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
    <cpp cflags="-I${prefix}/include"/>
  </export>
  
</package>
