<?xml version="1.0"?>
<package>
  <name>rpg_youbot_common</name>

  <version>0.1.0</version>
  <description>rpg_youbot_common</description>

  <maintainer email="mueggler@ifi.uzh.ch">Elias Mueggler</maintainer>
  <maintainer email="faessler@ifi.uzh.ch">Matthias Faessler</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>brics_actuator</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>brics_actuator</run_depend>
  
</package>
