<?xml version="1.0"?>
<package>
  <name>torque_control</name>

  <version>0.1.0</version>
  <description>torque_control</description>

  <maintainer email="mueggler@ifi.uzh.ch">Elias Mueggler</maintainer>
  <maintainer email="faessler@ifi.uzh.ch">Matthias Faessler</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>brics_actuator</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>youbot_arm_model</build_depend>
  
  <run_depend>brics_actuator</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>youbot_arm_model</run_depend>
  
</package>
