<?xml version="1.0"?>
<package>
  <name>torque_example</name>

  <version>0.1.0</version>
  <description>torque_example</description>

  <maintainer email="xxx@todo.todo">keiserb</maintainer>
  <author email="xxx@todo.todo">keiserb</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf_conversions</build_depend>
  <build_depend>youbot_description</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ik_solver_service</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>rpg_youbot_common</build_depend>
  <build_depend>torque_control</build_depend>
  <build_depend>trajectory_generator</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>brics_actuator</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
</package>
