<?xml version="1.0"?>
<package>
  <name>trajectory_generator</name>

  <version>0.1.0</version>
  <description>trajectory_generator</description>

  <maintainer email="xxx@todo.todo">keiserb</maintainer>
  <author email="xxx@todo.todo">keiserb</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf_conversions</build_depend>
  <build_depend>youbot_description</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ik_solver_service</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>brics_actuator</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
